--- a/OtelApp/templates/otel.html
+++ b/OtelApp/templates/otel.html
@@ -6,6 +6,16 @@
 
 
 {% block site-icerik %}
-    <h1>Otel Sistemi</h1>
+    <div class="container">
+        <div class="row justify-content-center mt-3">
+            <div class="col-md-3 bg-danger">
+                <h5 class="text-center">Oda Yapılandırma Menüsü</h5>
+            </div>
+
+            <div class="col-md-9 bg-info">
+                <h5 class="text-center">Odalar</h5>
+            </div>
+        </div>
+    </div>
     
 {% endblock site-icerik %}
