--- a/OtelApp/templates/index.html
+++ b/OtelApp/templates/index.html
@@ -22,6 +22,20 @@ Otel Giriş Ekranı
                         </div>
                         <button class="btn btn-success" type="submit">Giriş</button>
                     </form>
+                    <div class="mt-2">
+                        {% for message in messages %}
+                            {% if message.tags == 'succes' %}
+                            <div class="alert alert-success" role="alert">
+                                {{ message }}
+                            </div>
+                            {% endif %}
+                            {% if message.tags == 'error' or message.tags == 'warning' %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ message }}
+                            </div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
