--- a/OtelApp/templates/otel.html
+++ b/OtelApp/templates/otel.html
@@ -6,12 +6,12 @@ Otel Sistemi
 
 
 {% block site-icerik %}
+{% include "./Components/_navbar.html" %}
 <div class="container">
     <div class="row justify-content-between mt-3">
         <div class="col-md-3">
             <h5 class="text-center">Oda Yapılandırma Menüsü</h5>
         </div>
-
         <div class="col-md-9">
             <h5 class="text-center">Odalar</h5>
             <div class="row justify-content-between">
@@ -39,5 +39,7 @@ Otel Sistemi
         </div>
     </div>
 </div>
+
+
 
 {% endblock site-icerik %}
