--- a/OtelApp/templates/Components/_navbar.html
+++ b/OtelApp/templates/Components/_navbar.html
@@ -1,28 +1,30 @@
 <nav class="navbar navbar-expand-lg bg-dark-subtle">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'oteldashboard' %}">OtelSistem</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'oteldashboard' %}">Anasayfa</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Blokaj</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Muhasebe</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Müşteri Ara" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Ara</button>
-        </form>
-        <div class="ms-1">
-            <button class="btn btn-outline-success" id="darkModeToggle">a</button>
-        </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'oteldashboard' %}">OtelSistem</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="{% url 'oteldashboard' %}"><i class="fa-solid fa-house"></i> Anasayfa</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'blok' %}"><i class="fa-solid fa-thumbtack"></i> Blokaj</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'muhasebe' %}"><i class="fa-solid fa-calculator"></i> Muhasebe</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Müşteri Ara" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Ara</button>
+      </form>
+      <div class="ms-1">
+        <button class="btn btn-outline-success" id="darkModeToggle"><i class="fa-solid fa-moon"></i> / <i
+            class="fa-solid fa-sun"></i></button>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
