--- a/OtelApp/templates/otel.html
+++ b/OtelApp/templates/otel.html
@@ -19,29 +19,45 @@ Otel Sistemi
             <h5 class="text-center">Odalar</h5>
             <div class="row justify-content-between">
                 {% if odalar %}
-                    {% for oda in odalar %}
-                    <div class="col-md-3">
-                        {% if oda.roomclean == True %}
-                        <div class="mb-1">
-                            <span class="badge bg-info text-bg-succes">Temiz</span>
+                {% for oda in odalar %}
+                <div class="col-md-3 mb-4">
+                    <a href="{% url 'odadetay' oda.id %}" class="link-underline link-underline-opacity-0">
+                        <div class="card border-0">
+                            <div class="card-body rounded-3 {% if oda.roomisempty == True %}
+                              bg-info
+                              {% elif oda.roomdefective == True or oda.roomactive == True %}
+                              bg-warning
+                              {% else %}
+                              bg-danger
+                            {% endif %}">
+                                {% if oda.roomclean == True %}
+                                <div class="mb-1 text-center">
+                                    <span class="badge bg-danger shadow-lg text-bg-succes">Temiz</span>
+                                </div>
+                                {% elif oda.roomdefective == True %}
+                                <div class="mb-1 text-center">
+                                    <span class="badge bg-dark shadow-lg text-bg-succes">Arızalı</span>
+                                </div>
+                                {% elif oda.roomclean == False %}
+                                <div class="mb-1 text-center">
+                                    <span class="badge bg-info shadow-lg text-bg-succes">Kirli</span>
+                                </div>
+                                {% else %}
+                                <span class="badge text-bg-info">Kullanılabilir</span>
+                                {% endif %}
+                                <h5 class="card-title text-center">{{oda.roomnumber}}</h5>
+                            </div>
                         </div>
-                        {% elif oda.roomdefective == True %}
-                        <div class="mb-1">
-                            <span class="badge bg-dark text-bg-succes">Arızalı</span>
-                        </div>
-                        {% elif oda.roomclean == False %}
-                        <div class="mb-1">
-                            <span class="badge bg-danger text-bg-succes">Kirli</span>
-                        </div>
-                        {% else %}
-                        <span class="badge text-bg-info">Kullanılabilir</span>
-                        {% endif %}
-                        <button class="btn btn-danger mb-2 mt-0">{{oda.roomnumber}}</button>
-                    </div>
-                    {% endfor %}
+                    </a>
+                </div>
+                {% endfor %}
                 {% else %}
-                    <p>Oda Eklemelisin</p>
+                <p>Oda Eklemelisin</p>
                 {% endif %}
+
+
+
+
             </div>
         </div>
     </div>
