js some form fixed need the cont.

--- a/OtelApp/templates/roomdetail.html
+++ b/OtelApp/templates/roomdetail.html
@@ -10,8 +10,10 @@
 
 <!-- Navbarı içeri al -->
 {% include "./Components/_navbar.html" %}
+<div class="container">
+    <form action="" method="post">
+        {{form}}
+    </form>
+</div>
 
-    <div class="container">
-        <h1>{{odalar.roomtype}}</h1>
-    </div>
 {% endblock site-icerik %}
