Orm model change & RoomDetail Page UI Change

--- a/OtelApp/templates/otel.html
+++ b/OtelApp/templates/otel.html
@@ -32,7 +32,7 @@ Otel Sistemi
                             {% endif %}">
                                 {% if oda.roomclean == True %}
                                 <div class="mb-1 text-center">
-                                    <span class="badge bg-danger shadow-lg text-bg-succes">Temiz</span>
+                                    <span class="badge bg-success shadow-lg text-bg-succes">Temiz</span>
                                 </div>
                                 {% elif oda.roomdefective == True %}
                                 <div class="mb-1 text-center">
