Form Rules Changed & Model Fields Changed

--- a/OtelApp/templates/otel.html
+++ b/OtelApp/templates/otel.html
@@ -40,7 +40,7 @@ Otel Sistemi
                                 </div>
                                 {% elif oda.roomclean == False %}
                                 <div class="mb-1 text-center">
-                                    <span class="badge bg-info shadow-lg text-bg-succes">Kirli</span>
+                                    <span class="badge bg-warning shadow-lg text-bg-succes">Kirli</span>
                                 </div>
                                 {% else %}
                                 <span class="badge text-bg-info">Kullanılabilir</span>
