--- a/OtelApp/templates/roomdetail.html
+++ b/OtelApp/templates/roomdetail.html
@@ -29,20 +29,31 @@
     </div>
     {% if odalar.roomactive == True or odalar.roomdefective == True %}
     {% else %}
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+            <h5 class="text-center">Müşterilerim:</h5>
+            {% for kisi in musteri %}
+            <h1>{{kisi.first_name}}</h1>
+            {% endfor %}
+
+        </div>
+    </div>
     <div class="row justify-content-around mt-5">
         {% for i in count %}
         <div class="col-md-3">
             <div class="card">
                 <div class="card-body">
                     <h5 class="text-center mt-3">Müşteri bilgileri</h5>
-                    <form action="{% url 'odadetay' odalar.id %}" method="post">
+                    <form action="{% url 'misafirkayit' odalar.id %}" method="post">
                         {% csrf_token %}
                         <label for="first-name">İsim</label>
                         <input type="text" placeholder="Adınız" id="first-name" name="first">
                         <label for="last-name">Soyadınız</label>
                         <input type="text" placeholder="Soyadınız" id="last-name" name="last">
-                        <label for="nationality">Uyruğu</label>
-                        <input type="text" placeholder="Uyruğu" id="nationality" name="uyruk">
+                        <label for="countrySelect">Ülke Seç:</label>
+                        <select id="countrySelect">
+                            <option value="">Ülke Seç</option>
+                        </select>
                         <label for="tckimlik">Tc Numarası</label>
                         <input type="text" placeholder="TC Kimlik Numarası" id="tckimlik" name="tc">
                         <label for="passaport">Passaport</label>
