--- a/OtelApp/templates/Components/_navbar.html
+++ b/OtelApp/templates/Components/_navbar.html
@@ -39,7 +39,7 @@
 
 
               <div class="ms-1">
-                  <a href=""><button class="btn btn-outline-danger">Çıkış</button></a>
+                  <a href="{% url 'logout' %}"><button class="btn btn-outline-danger">Çıkış</button></a>
               </div>
           {% endif %}
 
