--- a/OtelApp/templates/otel.html
+++ b/OtelApp/templates/otel.html
@@ -22,6 +22,22 @@ Otel Sistemi
                     </div>
                 </div>
             </div>
+            <div class="row mt-3">
+                <div class="col-md-12">
+                    <h5 class="text-center">Müşteri Notları</h5>
+                    <div class="card shadow-lg">
+                        <div class="card-body">
+                            {% for musteri in musteriler %}
+                              {% if musteri.guest_note %}
+                                <a href="{% url 'musteridetay' musteri.id %}" class="link-underline link-underline-opacity-0">
+                                    <p class="text-center">{{musteri.first_name}} {{musteri.last_name}} 
+                                        <span class="badge bg-danger ms-1">Not</span><span class="badge bg-danger ms-1">{{musteri.room}}</span></p></a>
+                              {% endif %}
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col-md-9">
             <h5 class="text-center">Odalar</h5>
