fixed some issue

--- a/OtelApp/templates/blokaj.html
+++ b/OtelApp/templates/blokaj.html
@@ -9,6 +9,6 @@
 {% block site-icerik %}
   {% include "./Components/_navbar.html" %}
   <div class="container">
-    <h1>Blokaj sistemi</h1>
+    <h1>Blokaj sistemi yakında</h1>
   </div>
 {% endblock site-icerik %}
