--- a/OtelApp/templates/muhasebe.html
+++ b/OtelApp/templates/muhasebe.html
@@ -9,6 +9,6 @@
 {% block site-icerik %}
   {% include "./Components/_navbar.html" %}
   <div class="container">
-    <h1>Muhasebe Sayfasıdır!</h1>
+    <h1>Muhasebe Sayfasıdır! yakında</h1>
   </div>
 {% endblock site-icerik %}
