--- a/OtelApp/templates/base.html
+++ b/OtelApp/templates/base.html
@@ -13,6 +13,9 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
+    
+    <!-- FullCalendar CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.10.0/main.min.css" rel="stylesheet">
 
 
     <title>{% block site-title %}
@@ -32,5 +35,11 @@
     <!-- Bootstrap Cdn -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     
+    <!--FullCalendar Own Js-->
+    <script src="{% static 'js/calendar.js' %}"></script>
+    
+    <!-- FullCalendar JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.10.0/main.min.js"></script>
+
 </body>
 </html>
